kubernetes/apps/default/redisinsight/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redisinsight
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - redisinsight.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: redisinsight
          port: 5540
